--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,5 +1,5 @@
 {% if site.baseurl == "/pasta" %}
   <script type="module" src="{{site.baseurl}}/assets/js/utilities/pasta-dark-toggle.js"></script>
   <script defer src="{{ site.baseurl }}/assets/js/utilities/pasta-doc-utilities.js"></script>
-  <script defer src="{{site.baseurl}}/assets/js/utilities/pasta-toolclip-handler.js"></script>
+  <!-- <script defer src="{{site.baseurl}}/assets/js/utilities/pasta-toolclip-handler.js"></script> -->
 {% endif %}
