--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,7 +1,7 @@
 {% if site.baseurl == "/pasta" %}
   <script type="module" src="{{site.baseurl}}/assets/js/utilities/pasta-dark-toggle.js"></script>
   <script defer src="{{ site.baseurl }}/assets/js/utilities/pasta-doc-utilities.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/assets/js/libs/jekyll-tabs.js"></script>
+  <script defer type="text/javascript" src="{{ site.baseurl }}/assets/js/libs/jekyll-tabs.js"></script>
 
   <!-- <script defer src="{{site.baseurl}}/assets/js/utilities/pasta-toolclip-handler.js"></script> -->
 {% endif %}
